🐛 Adapt notebook to run on generic Ubuntu
make notebook platform-independent (Colab → Ubuntu)

--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -5,24 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "oUuQjW2oNMcJ",
         "qFfOrktMPq8M",
-        "KE7kSYSXQYLf",
-        "lGI4TNXPamMr",
-        "RlgP1ytnRtUK",
-        "KLmxLQeJSb4A",
-        "kXbSKFyeMqr2",
-        "k2-Fdp73cF0V",
-        "xMrEiLB_VAeR",
-        "CKRRbwDFv3ZQ",
-        "G3KBe4R65bl1",
-        "yVJA-3jSATGV",
-        "BbosNo0TD3oH",
-        "Sam22f-YT1xR",
         "IF6-Z5RotAcO"
-      ],
-      "authorship_tag": "ABX9TyNZRnLstLRUIHlNsMqAbHFy",
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -33,16 +18,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/groda/big_data/blob/master/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -156,7 +131,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C7X0EZaMPrsD",
-        "outputId": "a5cb892f-e89b-4d33-8430-cebed9d3b225"
+        "outputId": "2bf18811-0898-4d12-ac7c-20558aec8437"
       },
       "execution_count": null,
       "outputs": [
@@ -186,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lABuOV124G4x",
-        "outputId": "a0d5c202-c6cd-464a-e165-30ed8a1b617d"
+        "outputId": "05c1947a-8370-4813-89b7-76cb6984d4cf"
       },
       "execution_count": null,
       "outputs": [
@@ -227,7 +202,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mCmk5GOqv0Y-",
-        "outputId": "d6e297d9-530b-4116-869e-f89dd5d2f811"
+        "outputId": "4efba03e-3fc7-4214-c37b-dd238a840f58"
       },
       "execution_count": null,
       "outputs": [
@@ -261,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dd7en2Cv68ce",
-        "outputId": "3234c908-df2e-419c-b67d-f8b9c2bf2561"
+        "outputId": "40430612-b7e6-4c82-99ca-3a348ba9d99a"
       },
       "execution_count": null,
       "outputs": [
@@ -292,7 +267,7 @@
       ],
       "metadata": {
         "id": "P88xcreEQBcx",
-        "outputId": "c8bcd923-0358-4a5c-f419-3ff756e79e15",
+        "outputId": "74ee04ce-8823-49d0-a80e-7b2e30c177e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -330,7 +305,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "54LqS5Rkgyli",
-        "outputId": "44c76aa6-1bd9-43db-be2f-386364d3898b"
+        "outputId": "6ab71854-2018-4711-fda9-2e268cf6024c"
       },
       "execution_count": null,
       "outputs": [
@@ -338,7 +313,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "File ‘hadoop-3.4.0.tar.gz’ already there; not retrieving.\n",
+            "--2025-06-24 12:23:17--  https://dlcdn.apache.org/hadoop/common/hadoop-3.4.0/hadoop-3.4.0.tar.gz\n",
+            "Resolving dlcdn.apache.org (dlcdn.apache.org)... 151.101.2.132, 2a04:4e42::644\n",
+            "Connecting to dlcdn.apache.org (dlcdn.apache.org)|151.101.2.132|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 965537117 (921M) [application/x-gzip]\n",
+            "Saving to: ‘hadoop-3.4.0.tar.gz’\n",
+            "\n",
+            "hadoop-3.4.0.tar.gz 100%[===================>] 920.81M  73.9MB/s    in 13s     \n",
+            "\n",
+            "2025-06-24 12:23:45 (72.1 MB/s) - ‘hadoop-3.4.0.tar.gz’ saved [965537117/965537117]\n",
             "\n"
           ]
         }
@@ -356,7 +340,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!tar xzf hadoop-3.4.0.tar.gz"
+        "%%bash\n",
+        "if [ ! -d \"hadoop-3.4.0\" ]; then\n",
+        "  tar xzf hadoop-3.4.0.tar.gz\n",
+        "fi"
       ],
       "metadata": {
         "id": "C17WYI0mQRE8"
@@ -394,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NhTinHLqCrFQ",
-        "outputId": "ad28b904-4426-49e3-c9db-fe887e2049e5"
+        "outputId": "7d7e0b60-0ed0-4239-c91b-a2b6daa25315"
       },
       "execution_count": null,
       "outputs": [
@@ -402,7 +389,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "File ‘hadoop-3.4.0.tar.gz.sha512’ already there; not retrieving.\n",
+            "--2025-06-24 12:24:08--  https://dlcdn.apache.org/hadoop/common/hadoop-3.4.0/hadoop-3.4.0.tar.gz.sha512\n",
+            "Resolving dlcdn.apache.org (dlcdn.apache.org)... 151.101.2.132, 2a04:4e42::644\n",
+            "Connecting to dlcdn.apache.org (dlcdn.apache.org)|151.101.2.132|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 160 [text/plain]\n",
+            "Saving to: ‘hadoop-3.4.0.tar.gz.sha512’\n",
+            "\n",
+            "hadoop-3.4.0.tar.gz 100%[===================>]     160  --.-KB/s    in 0s      \n",
+            "\n",
+            "2025-06-24 12:24:08 (6.50 MB/s) - ‘hadoop-3.4.0.tar.gz.sha512’ saved [160/160]\n",
             "\n"
           ]
         }
@@ -431,7 +427,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zL302M1OhFMH",
-        "outputId": "e655d9b9-6e88-4d59-84e8-caab2c4639a0"
+        "outputId": "a070f00d-3860-4a51-e33c-a86c20688ed0"
       },
       "execution_count": null,
       "outputs": [
@@ -467,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "49xx-zSxIdxa",
-        "outputId": "683163d3-d81a-4ef6-8f94-b7a915aad307"
+        "outputId": "9403498c-8e5e-4401-df95-44de81e11c1f"
       },
       "execution_count": null,
       "outputs": [
@@ -493,6 +489,53 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "print(os.environ)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Aif21X1ONvwH",
+        "outputId": "729bbd33-1098-431e-f31b-a0dd06b35b9b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "environ({'SHELL': '/bin/bash', 'NV_LIBCUBLAS_VERSION': '12.5.3.2-1', 'NVIDIA_VISIBLE_DEVICES': 'all', 'COLAB_JUPYTER_TRANSPORT': 'ipc', 'NV_NVML_DEV_VERSION': '12.5.82-1', 'NV_CUDNN_PACKAGE_NAME': 'libcudnn9-cuda-12', 'CGROUP_MEMORY_EVENTS': '/sys/fs/cgroup/memory.events /var/colab/cgroup/jupyter-children/memory.events', 'NV_LIBNCCL_DEV_PACKAGE': 'libnccl-dev=2.22.3-1+cuda12.5', 'NV_LIBNCCL_DEV_PACKAGE_VERSION': '2.22.3-1', 'VM_GCE_METADATA_HOST': '169.254.169.253', 'MODEL_PROXY_HOST': 'https://mp.kaggle.net', 'HOSTNAME': '553c798b7f43', 'LANGUAGE': 'en_US', 'TBE_RUNTIME_ADDR': '172.28.0.1:8011', 'COLAB_TPU_1VM': '', 'GCE_METADATA_TIMEOUT': '3', 'NVIDIA_REQUIRE_CUDA': 'cuda>=12.5 brand=unknown,driver>=470,driver<471 brand=grid,driver>=470,driver<471 brand=tesla,driver>=470,driver<471 brand=nvidia,driver>=470,driver<471 brand=quadro,driver>=470,driver<471 brand=quadrortx,driver>=470,driver<471 brand=nvidiartx,driver>=470,driver<471 brand=vapps,driver>=470,driver<471 brand=vpc,driver>=470,driver<471 brand=vcs,driver>=470,driver<471 brand=vws,driver>=470,driver<471 brand=cloudgaming,driver>=470,driver<471 brand=unknown,driver>=535,driver<536 brand=grid,driver>=535,driver<536 brand=tesla,driver>=535,driver<536 brand=nvidia,driver>=535,driver<536 brand=quadro,driver>=535,driver<536 brand=quadrortx,driver>=535,driver<536 brand=nvidiartx,driver>=535,driver<536 brand=vapps,driver>=535,driver<536 brand=vpc,driver>=535,driver<536 brand=vcs,driver>=535,driver<536 brand=vws,driver>=535,driver<536 brand=cloudgaming,driver>=535,driver<536 brand=unknown,driver>=550,driver<551 brand=grid,driver>=550,driver<551 brand=tesla,driver>=550,driver<551 brand=nvidia,driver>=550,driver<551 brand=quadro,driver>=550,driver<551 brand=quadrortx,driver>=550,driver<551 brand=nvidiartx,driver>=550,driver<551 brand=vapps,driver>=550,driver<551 brand=vpc,driver>=550,driver<551 brand=vcs,driver>=550,driver<551 brand=vws,driver>=550,driver<551 brand=cloudgaming,driver>=550,driver<551', 'NV_LIBCUBLAS_DEV_PACKAGE': 'libcublas-dev-12-5=12.5.3.2-1', 'NV_NVTX_VERSION': '12.5.82-1', 'COLAB_JUPYTER_IP': '172.28.0.12', 'NV_CUDA_CUDART_DEV_VERSION': '12.5.82-1', 'NV_LIBCUSPARSE_VERSION': '12.5.1.3-1', 'COLAB_LANGUAGE_SERVER_PROXY_ROOT_URL': 'http://172.28.0.1:8013/', 'NV_LIBNPP_VERSION': '12.3.0.159-1', 'NCCL_VERSION': '2.22.3-1', 'KMP_LISTEN_PORT': '6000', 'TF_FORCE_GPU_ALLOW_GROWTH': 'true', 'ENV': '/root/.bashrc', 'PWD': '/', 'TBE_EPHEM_CREDS_ADDR': '172.28.0.1:8009', 'COLAB_LANGUAGE_SERVER_PROXY_REQUEST_TIMEOUT': '30s', 'TBE_CREDS_ADDR': '172.28.0.1:8008', 'NV_CUDNN_PACKAGE': 'libcudnn9-cuda-12=9.2.1.18-1', 'NVIDIA_DRIVER_CAPABILITIES': 'compute,utility', 'COLAB_JUPYTER_TOKEN': '', 'LAST_FORCED_REBUILD': '20250509', 'NV_NVPROF_DEV_PACKAGE': 'cuda-nvprof-12-5=12.5.82-1', 'NV_LIBNPP_PACKAGE': 'libnpp-12-5=12.3.0.159-1', 'NV_LIBNCCL_DEV_PACKAGE_NAME': 'libnccl-dev', 'TCLLIBPATH': '/usr/share/tcltk/tcllib1.20', 'NV_LIBCUBLAS_DEV_VERSION': '12.5.3.2-1', 'NVIDIA_PRODUCT_NAME': 'CUDA', 'COLAB_KERNEL_MANAGER_PROXY_HOST': '172.28.0.12', 'UV_BUILD_CONSTRAINT': '', 'NV_LIBCUBLAS_DEV_PACKAGE_NAME': 'libcublas-dev-12-5', 'NV_CUDA_CUDART_VERSION': '12.5.82-1', 'COLAB_WARMUP_DEFAULTS': '1', 'HOME': '/root', 'LANG': 'en_US.UTF-8', 'CUDA_VERSION': '12.5.1', 'CLOUDSDK_CONFIG': '/content/.config', 'NV_LIBCUBLAS_PACKAGE': 'libcublas-12-5=12.5.3.2-1', 'NV_CUDA_NSIGHT_COMPUTE_DEV_PACKAGE': 'cuda-nsight-compute-12-5=12.5.1-1', 'UV_SYSTEM_PYTHON': 'true', 'COLAB_RELEASE_TAG': 'release-colab_20250620-060048_RC00', 'KMP_TARGET_PORT': '9000', 'KMP_EXTRA_ARGS': '--logtostderr --listen_host=172.28.0.12 --target_host=172.28.0.12 --tunnel_background_save_url=https://colab.research.google.com/tun/m/cc48301118ce562b961b3c22d803539adc1e0c19/m-s-1ngvb7o5d7f8n --tunnel_background_save_delay=10s --tunnel_periodic_background_save_frequency=30m0s --enable_output_coalescing=true --output_coalescing_required=true ', 'UV_INSTALL_DIR': '/usr/local/bin', 'NV_LIBNPP_DEV_PACKAGE': 'libnpp-dev-12-5=12.3.0.159-1', 'COLAB_LANGUAGE_SERVER_PROXY_LSP_DIRS': '/datalab/web/pyright/typeshed-fallback/stdlib,/usr/local/lib/python3.10/dist-packages', 'NV_LIBCUBLAS_PACKAGE_NAME': 'libcublas-12-5', 'COLAB_KERNEL_MANAGER_PROXY_PORT': '6000', 'CLOUDSDK_PYTHON': 'python3', 'NV_LIBNPP_DEV_VERSION': '12.3.0.159-1', 'NO_GCE_CHECK': 'False', 'PYTHONPATH': '/env/python', 'NV_LIBCUSPARSE_DEV_VERSION': '12.5.1.3-1', 'LIBRARY_PATH': '/usr/local/cuda/lib64/stubs', 'NV_CUDNN_VERSION': '9.2.1.18-1', 'SHLVL': '0', 'NV_CUDA_LIB_VERSION': '12.5.1-1', 'COLAB_LANGUAGE_SERVER_PROXY': '/usr/colab/bin/language_service', 'NVARCH': 'x86_64', 'UV_CONSTRAINT': '', 'PYTHONUTF8': '1', 'NV_CUDNN_PACKAGE_DEV': 'libcudnn9-dev-cuda-12=9.2.1.18-1', 'NV_LIBNCCL_PACKAGE': 'libnccl2=2.22.3-1+cuda12.5', 'LD_LIBRARY_PATH': '/usr/local/nvidia/lib:/usr/local/nvidia/lib64', 'COLAB_GPU': '', 'NV_CUDA_NSIGHT_COMPUTE_VERSION': '12.5.1-1', 'GCS_READ_CACHE_BLOCK_SIZE_MB': '16', 'NV_NVPROF_VERSION': '12.5.82-1', 'LC_ALL': 'en_US.UTF-8', 'COLAB_FILE_HANDLER_ADDR': 'localhost:3453', 'PATH': '/content/hadoop-3.4.0/bin:/opt/bin:/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/tools/node/bin:/tools/google-cloud-sdk/bin', 'NV_LIBNCCL_PACKAGE_NAME': 'libnccl2', 'COLAB_DEBUG_ADAPTER_MUX_PATH': '/usr/local/bin/dap_multiplexer', 'NV_LIBNCCL_PACKAGE_VERSION': '2.22.3-1', 'PYTHONWARNINGS': 'ignore:::pip._internal.cli.base_command', 'DEBIAN_FRONTEND': 'noninteractive', 'COLAB_BACKEND_VERSION': 'next', 'OLDPWD': '/', '_PYVIZ_COMMS_INSTALLED': '1', 'PYDEVD_USE_FRAME_EVAL': 'NO', 'JPY_PARENT_PID': '91', 'TERM': 'xterm-color', 'CLICOLOR': '1', 'PAGER': 'cat', 'GIT_PAGER': 'cat', 'MPLBACKEND': 'module://matplotlib_inline.backend_inline', 'ENABLE_DIRECTORYPREFETCHER': '1', 'USE_AUTH_EPHEM': '1', 'COLAB_NOTEBOOK_ID': '177aNXDHZHU7pYxKhQtMYrF6QKH2KT3cG', 'HADOOP_HOME': '/content/hadoop-3.4.0'})\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo $PATH"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GcM-idgZQqfV",
+        "outputId": "44c3158a-e8e8-4283-cce3-466f9a31a79b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/hadoop-3.4.0/bin:/opt/bin:/usr/local/nvidia/bin:/usr/local/cuda/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/tools/node/bin:/tools/google-cloud-sdk/bin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -568,7 +611,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ISxE4Gqg_LG",
-        "outputId": "a3db85bf-ca56-4fd5-b7c6-c857818a73ff"
+        "outputId": "a69ca821-a48b-4979-e663-3bdad46c3219"
       },
       "execution_count": null,
       "outputs": [
@@ -609,11 +652,15 @@
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "echo -e \"export HDFS_NAMENODE_USER=root \\n\\\n",
-        "export HDFS_DATANODE_USER=root \\n\\\n",
-        "export HDFS_SECONDARYNAMENODE_USER=root \\n\\\n",
-        "export YARN_RESOURCEMANAGER_USER=root \\n\\\n",
-        "export YARN_NODEMANAGER_USER=root\" >> hadoop-3.4.0/etc/hadoop/hadoop-env.sh"
+        "cp -n hadoop-3.4.0/etc/hadoop/hadoop-env.sh hadoop-3.4.0/etc/hadoop/hadoop-env.sh.org\n",
+        "cat <<😃 >hadoop-3.4.0/etc/hadoop/hadoop-env.sh\n",
+        "export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64\n",
+        "export HDFS_NAMENODE_USER=root\n",
+        "export HDFS_DATANODE_USER=root\n",
+        "export HDFS_SECONDARYNAMENODE_USER=root\n",
+        "export YARN_RESOURCEMANAGER_USER=root\n",
+        "export YARN_NODEMANAGER_USER=root\n",
+        "😃"
       ],
       "metadata": {
         "id": "2_vn-TGyPe9V"
@@ -653,7 +700,7 @@
       "source": [
         "%%bash\n",
         "apt-get update\n",
-        "apt-get install openssh-server\n",
+        "apt-get -y install openssh-server\n",
         "echo 'StrictHostKeyChecking no' >> /etc/ssh/ssh_config\n",
         "/etc/init.d/ssh restart"
       ],
@@ -769,7 +816,7 @@
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "rm /root/.ssh/id_rsa\n",
+        "rm $HOME/.ssh/id_rsa\n",
         "ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa\n",
         "cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys\n",
         "chmod 0600 ~/.ssh/authorized_keys"
@@ -830,7 +877,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!ssh localhost \"echo hi!\""
+        "!ssh localhost \"echo hi 👋\""
       ],
       "metadata": {
         "colab": {
@@ -974,22 +1021,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!echo -e \"export JAVA_HOME=$(readlink -f $(which java) | sed 's/\\/bin\\/java$//') \\n\\\n",
-        "export HDFS_NAMENODE_USER=root \\n\\\n",
-        "export HDFS_DATANODE_USER=root \\n\\\n",
-        "export HDFS_SECONDARYNAMENODE_USER=root \\n\\\n",
-        "export YARN_RESOURCEMANAGER_USER=root \\n\\\n",
-        "export YARN_NODEMANAGER_USER=root\" >> hadoop-3.4.0/etc/hadoop/hadoop-env.sh"
-      ],
-      "metadata": {
-        "id": "8cb7lXMptVHb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Start cluster"
@@ -1025,6 +1056,24 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "# Check if HDFS is in safe mode\n",
+        "if hdfs dfsadmin -safemode get | grep 'ON'; then\n",
+        "  echo \"Namenode is in safe mode. Leaving safe mode...\"\n",
+        "  hdfs dfsadmin -safemode leave\n",
+        "else\n",
+        "  echo \"Namenode is not in safe mode.\"\n",
+        "fi"
+      ],
+      "metadata": {
+        "id": "pOHsiWv9or7B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Run some simple HDFS commands"
@@ -1042,15 +1091,21 @@
         "hdfs dfs -mkdir /user/root # this is the \"home\" of user root on HDFS\n",
         "hdfs dfs -mkdir my_dir\n",
         "\n",
-        "# if sample_data does not exist, create it (so that the notebook can run also outside of Colab)\n",
-        "mkdir -p sample_data # thx Gemini\n",
-        "touch sample_data/mnist_test.csv # thx https://unix.stackexchange.com/a/404855\n",
+        "# if sampls_data does not exist, create it (so that the notebook can run also outside of Colab)\n",
+        "mkdir -p sample_data\n",
+        "touch sample_data/mnist_test.csv\n",
+        "\n",
+        "# Check if the file is empty and fill it if needed\n",
+        "if [ ! -s sample_data/mnist_test.csv ]; then\n",
+        "  echo -e \"0 1 2 3 4\\n5 6 7 8 9\" > sample_data/mnist_test.csv\n",
+        "fi\n",
+        "\n",
         "\n",
         "# upload file mnist_test.csv to my_dir\n",
         "hdfs dfs -put sample_data/mnist_test.csv my_dir/\n",
         "\n",
         "# show contents of directory my_dir\n",
-        "hdfs dfs -ls -h my_dir\n"
+        "hdfs dfs -ls -h my_dir"
       ],
       "metadata": {
         "colab": {
@@ -1376,7 +1431,7 @@
       "cell_type": "code",
       "source": [
         "%%writefile myAggregatorForKeyCount.py\n",
-        "#!/usr/local/bin/python\n",
+        "#!/usr/bin/env python\n",
         "import sys\n",
         "\n",
         "def generateLongCountToken(id):\n",
@@ -1398,10 +1453,22 @@
         "     main(sys.argv)"
       ],
       "metadata": {
-        "id": "fMKEqUF1T-v9"
+        "id": "fMKEqUF1T-v9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b3f905e8-800c-4441-ef2e-1d044c1d2b76"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting myAggregatorForKeyCount.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1457,15 +1524,16 @@
       "source": [
         "%%bash\n",
         "\n",
+        "chmod +x myAggregatorForKeyCount.py\n",
+        "\n",
         "hdfs dfs -rm -r output_aggregate\n",
         "\n",
         "mapred streaming \\\n",
-        "  -file mapper.py \\\n",
-        "  -file myAggregatorForKeyCount.py \\\n",
         "  -input input \\\n",
         "  -output output_aggregate \\\n",
         "  -mapper myAggregatorForKeyCount.py \\\n",
-        "  -reducer aggregate\n"
+        "  -reducer aggregate \\\n",
+        "  -file myAggregatorForKeyCount.py\n"
       ],
       "metadata": {
         "id": "XwxHJ7yyVR34"
@@ -1509,7 +1577,8 @@
       "source": [
         "%%bash\n",
         "hdfs dfs -get output_aggregate/part-00000 result # download results file\n",
-        "column -t result|sort -k2nr # sort by field 2 numerically in descending order"
+        "# Use awk to format the output into columns and then sort by the second field numerically in descending order\n",
+        "awk '{printf \"%-20s %s\\n\", $1, $2}' result | sort -k2nr"
       ],
       "metadata": {
         "id": "Y8IYl4hAZhZm"
