--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -458,7 +458,7 @@
         "import os\n",
         "os.environ['HADOOP_HOME'] = os.path.join(os.getcwd(), 'hadoop-3.4.0')\n",
         "os.environ['PATH'] = ':'.join([os.path.join(os.environ['HADOOP_HOME'], 'bin'), os.environ['PATH']])\n",
-        #"os.environ['JAVA_HOME'] = '/usr/lib/jvm/java-11-openjdk-amd64'"
+        "#os.environ['JAVA_HOME'] = '/usr/lib/jvm/java-11-openjdk-amd64'"
       ],
       "metadata": {
         "id": "6V03we10Igek"
