--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -673,10 +673,10 @@
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "apt-get update\n",
-        "apt-get -y install openssh-server\n",
-        "echo 'StrictHostKeyChecking no' >> /etc/ssh/ssh_config\n",
-        "/etc/init.d/ssh restart"
+        "sudo apt-get update\n",
+        "sudo apt-get -y install openssh-server\n",
+        "echo 'StrictHostKeyChecking no' | sudo tee -a /etc/ssh/ssh_config",
+        "sudo systemctl restart ssh"
       ],
       "metadata": {
         "colab": {
