--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -676,7 +676,7 @@
         "sudo apt-get update\n",
         "sudo apt-get -y install openssh-server\n",
         "echo 'StrictHostKeyChecking no' | sudo tee -a /etc/ssh/ssh_config",
-        "sudo systemctl restart ssh"
+        "sudo /etc/init.d/ssh restart"
       ],
       "metadata": {
         "colab": {
