--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -675,7 +675,7 @@
         "%%bash\n",
         "sudo apt-get update\n",
         "sudo apt-get -y install openssh-server\n",
-        "echo 'StrictHostKeyChecking no' | sudo tee -a /etc/ssh/ssh_config",
+        "echo 'StrictHostKeyChecking no' >> /etc/ssh/ssh_config\n",
         "sudo /etc/init.d/ssh restart"
       ],
       "metadata": {
