--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -1071,7 +1071,7 @@
         "\n",
         "# Check if the file is empty and fill it if needed\n",
         "if [ ! -s sample_data/mnist_test.csv ]; then\n",
-        "  echo -e \"0 1 2 3 4\\n5 6 7 8 9\" > sample_data/mnist_test.csv\n",
+        "  echo -e \"0\\n1\\n2\\n3\\n4\\n5\\n6\\n7\\n8\\n9\" > sample_data/mnist_test.csv\n",
         "fi\n",
         "\n",
         "\n",
