--- a/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
+++ b/Hadoop_Setting_up_a_Single_Node_Cluster.ipynb
@@ -553,14 +553,14 @@
         "        <name>fs.defaultFS</name> \\n\\\n",
         "        <value>hdfs://localhost:9000</value> \\n\\\n",
         "    </property> \\n\\\n",
-        "</configuration>\" >hadoop-3.4.0/etc/hadoop/core-site.xml\n",
+        "</configuration>\" | sudo tee hadoop-3.4.0/etc/hadoop/core-site.xml > /dev/null\n",
         "\n",
         "echo -e \"<configuration> \\n\\\n",
         "    <property> \\n\\\n",
         "        <name>dfs.replication</name> \\n\\\n",
         "        <value>1</value> \\n\\\n",
         "    </property> \\n\\\n",
-        "</configuration>\" >hadoop-3.4.0/etc/hadoop/hdfs-site.xml"
+        "</configuration>\" | sudo tee hadoop-3.4.0/etc/hadoop/hdfs-site.xml > /dev/null\n"
       ],
       "metadata": {
         "id": "_n2d2lqXSLU1"
@@ -580,7 +580,8 @@
     {
       "cell_type": "code",
       "source": [
-        "cat hadoop-3.4.0/etc/hadoop/hdfs-site.xml"
+        "!cat hadoop-3.4.0/etc/hadoop/hdfs-site.xml",
+        "!cat hadoop-3.4.0/etc/hadoop/core-site.xml"
       ],
       "metadata": {
         "colab": {
