✨ revised version ngrams with PySpark

--- a/ngrams_with_pyspark.ipynb
+++ b/ngrams_with_pyspark.ipynb
@@ -490,7 +490,7 @@
         "\n",
         "We are going to use the function [`wholeTextFiles`](https://spark.apache.org/docs/latest/api/python/reference/api/pyspark.SparkContext.wholeTextFiles.html) to read the whole file as a single record into a [Resilient Distributed Dataset (RDD)](https://spark.apache.org/docs/latest/rdd-programming-guide.html#resilient-distributed-datasets-rdds).\n",
         "\n",
-        "Not that with `wholeTextFiles`\n",
+        "Note that with `wholeTextFiles`\n",
         "> _Each file is read as a single record and returned in a key-value pair, where the key is the path of each file, the value is the content of each file._"
       ]
     },
@@ -760,7 +760,7 @@
         "                 .sortBy(lambda x: x[1], ascending=False)\n",
         "```\n",
         "\n",
-        "First of all, a small remark on the usage of the backslash (`\\`) used to break long lines to represent line continuation: if all of a sudden you get some strange error message, make sure that the backslash is the last character in the line (there might be some white characters after `\\` that need to be deleted).\n",
+        "First of all, a small remark on the usage of the backslash (`\\`) used to break long lines to represent line continuation: if all of a sudden you get some strange error messages, make sure that the backslash is the last character in the line (there might be some white characters after `\\` that need to be deleted).\n",
         "\n",
         "- `map(lambda x: x[1])` The function [`wholeTextFiles`](https://spark.apache.org/docs/latest/api/python/reference/api/pyspark.SparkContext.wholeTextFiles.html) reads each file as a single record and returns in a key-value pair, where the key is the path of each file `(path/of/file, content)` so we need to extract the second component to get the content of the file.\n",
         "- `map(lambda text: text.replace('\\n', ' ').replace('\\r', ' '))` removes all newline characters.\n",
@@ -796,7 +796,7 @@
       "source": [
         "### 1. Normalize text\n",
         "\n",
-        "There are some improvements that can immediately be done to the code. Firstly, we can improve `.flatMap(lambda x: [x.split()])`. This is the function used to split each line of the input text into _tokens_ and as it is it is a very rudimentary method.\n",
+        "There are some improvements that can immediately be done to the code. Firstly, we can improve `.flatMap(lambda x: [x.split()])`. This function splits each line of the input text into tokens, but it currently uses a very basic and rudimentary approach.\n",
         "\n",
         "The transformation\n",
         "\n",
